--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "repository": "https://github.com/amirmohsen/flexschema",
   "description": "A highly flexible and dynamic schema library",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "rollup -c -m",
+    "dev": "rollup -c -m -w",
     "test": "jest",
     "pretest": "npm run build",
     "prepublishOnly": "npm run build"
